index.css
/* "A (more) Modern CSS Reset" by Andy Bell
Source: https://piccalil.li/blog/a-more-modern-css-reset/
Licensed under CC BY 3.0
https://creativecommons.org/licenses/by/3.0/
Modified: removed comments and unused element selectors.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  font-size: 62.5%;
}
body,
h1 {
  margin-block-end: 0;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  line-height: 1.5;
  display: flex;
  justify-content: center;
  align-items: center;
}
h1,
button {
  line-height: 1.1;
}
input,
button,
textarea,
select {
  font-family: inherit;
  font-size: inherit;
}
/*COMPONENT STYLES*/
body {
  background-color: #888;
}

#calculator-component {
  border: 1px solid #333;
  box-shadow: 7px 7px 14px #000;
  background-color: rgb(20, 20, 216);
}
.output-display {
  display: flex;
  width: 100%;
  min-height: 96px;
  max-height: 144px;
  align-items: center;
  background-color: #000;
  color: #fff;
  overflow-x: hidden;
  font-size: 48px;
  padding-left: 20px;
}
#calculator-btns {
  display: grid;
  margin: 30px;
  row-gap: 20px;
}

.row {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  column-gap: 20px;
}
.btn {
  display: flex;
  font-size: 2.7rem;
  justify-content: center;
  align-items: center;
  padding: 12px;
  border: none;
  box-shadow: 2px 2px 3px #222;
}
#history-btn {
  grid-column: 2; /* centers bottom 2 buttons in their row container */
}
.btn:hover {
  outline: 3px solid #000; /* using border changes the rendered dimensions which I didn't want */
  opacity: 0.92;
}
.btn:active {
  background-color: #ff5353;
  box-shadow: 1px 1px 20px #111;
}
.btn:focus-visible,
.btn-focus {
  border: none;
}

@media (max-width: 380px) {
  #calculator-component {
    width: 100vw;
  }
  .row {
    column-gap: 8px;
  }
  #calculator-btns {
    margin: 0;
    row-gap: 8px;
  }
  .output-display {
    margin-bottom: 12px;
  }
}

